--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "mode": "development",
   "private": true,
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/cli": "^7.21.0",
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
+    "babel-jest": "^29.5.0",
     "css-loader": "^6.7.3",
+    "jest": "^29.5.0",
     "style-loader": "^3.3.2",
     "webpack": "^5.77.0",
     "webpack-cli": "^5.0.1"
